(executable
 (name hello)
 (modules hello))

(executable
 (name runweb)
 (modules runweb content)
 (libraries tiny_httpd))

(rule
 (target content.ml)
 (deps
  (file content/hello.wasm)
  (file content/index.html)
  (file content/script.js))
 (action
  (with-stdout-to
   %{null}
   (run ocaml-crunch -m plain content -o %{target}))))
